--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -645,3 +645,8 @@
 - regex: 'COAF%20SMART%20Citizen/'
   name: 'COAF SMART Citizen'
   version: ''
+
+# GitHub Desktop (https://desktop.github.com/)
+- regex: 'GitHubDesktop/([\d\.]+)'
+  name: 'GitHub Desktop'
+  version: '$1'
