Adds detection for Logi Options+

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -650,3 +650,8 @@
 - regex: 'GitHubDesktop/([\d\.]+)'
   name: 'GitHub Desktop'
   version: '$1'
+
+# Logi Options+ (https://www.logitech.com/en-us/software/logi-options-plus.html)
+- regex: 'logioptionsplus/([\d\.]+)'
+  name: 'Logi Options+'
+  version: '$1'
