--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1247,3 +1247,19 @@
     model: ""
   os_family: Windows
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) logioptionsplus/1.0.0 Chrome/91.0.4472.164 Electron/13.2.3 Safari/537.36
+  os:
+    name: Windows
+    version: "10"
+    platform: x64
+  client:
+    type: mobile app
+    name: Logi Options+
+    version: 1.0.0
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
