--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3914,7 +3914,6 @@
     engine: Blink
     engine_version: ""
     family: Chrome
-
 -
   user_agent: Nokia6120c/GoBrowser/2.0.290
   client:
@@ -3930,6 +3929,15 @@
     type: browser
     name: Tenta Browser
     version: 4.0.55
+    engine: Blink
+    engine_version: ""
+    family: Chrome
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) y8-browser/1.0.10 Chrome/73.0.3683.121 Electron/5.0.13 Safari/537.36
+  client:
+    type: browser
+    name: Y8 Browser
+    version: 1.0.10
     engine: Blink
     engine_version: ""
     family: Chrome
