Adds detection for Flash Browser
Both browsers have the same user agent, only the Electron version is different

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Flash Browser (https://github.com/asteroid-dev/FlashBrowser or https://github.com/radubirsan/FlashBrowser)
+- regex: 'FlashBrowser/(\d+[\.\d]+)'
+  name: 'Flash Browser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # Y8 Browser (https://www.y8.com/)
 - regex: 'y8-browser/(\d+[\.\d]+)'
   name: 'Y8 Browser'
