--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3941,3 +3941,12 @@
     engine: Blink
     engine_version: ""
     family: Chrome
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) FlashBrowser/1.0.0 Chrome/83.0.4103.122 Electron/9.1.0 Safari/537.36
+  client:
+    type: browser
+    name: Flash Browser
+    version: 1.0.0
+    engine: Blink
+    engine_version: ""
+    family: Chrome
