Adds detection for Spectre Browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3950,3 +3950,12 @@
     engine: Blink
     engine_version: ""
     family: Chrome
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) spectre-browser/1.1.2 Chrome/76.0.3809.146 Electron/6.1.7 Safari/537.36
+  client:
+    type: browser
+    name: Spectre Browser
+    version: 1.1.2
+    engine: Blink
+    engine_version: ""
+    family: Chrome
