--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3959,3 +3959,12 @@
     engine: Blink
     engine_version: ""
     family: Chrome
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) NuMuKiBrowser/1.0.2 Chrome/87.0.4280.88 Electron/11.1.1 Safari/537.36
+  client:
+    type: browser
+    name: NuMuKi Browser
+    version: 1.0.2
+    engine: Blink
+    engine_version: ""
+    family: Chrome
