--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# NuMuKi Browser (https://www.numuki.com/app-download/)
+- regex: 'NuMuKiBrowser/(\d+[\.\d]+)'
+  name: 'NuMuKi Browser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # Spectre Browser (https://spectrebots.com/products/spectre-desktop-browser)
 - regex: 'spectre-browser/(\d+[\.\d]+)'
   name: 'Spectre Browser'
