Adds detection for Harman Browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3977,3 +3977,12 @@
     engine: Blink
     engine_version: ""
     family: Chrome
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Harman_Browser/0.0.6 Chrome/85.0.4183.121 Electron/10.1.5 Safari/537.36
+  client:
+    type: browser
+    name: Harman Browser
+    version: 0.0.6
+    engine: Blink
+    engine_version: ""
+    family: Chrome
