--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3986,3 +3986,12 @@
     engine: Blink
     engine_version: ""
     family: Chrome
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) psi-secure-browser/1.1.4 Chrome/61.0.3163.100 Electron/2.90.12 Safari/537.36
+  client:
+    type: browser
+    name: PSI Secure Browser
+    version: 1.1.4
+    engine: Blink
+    engine_version: ""
+    family: Chrome
