--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3995,3 +3995,12 @@
     engine: Blink
     engine_version: ""
     family: Chrome
+-
+  user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 11_0_0) AppleWebKit/537.36 (KHTML, like Gecko) lagatos-browser/2.0.0-1 Chrome/83.0.4103.122 Electron/9.3.5 Safari/537.36
+  client:
+    type: browser
+    name: Lagatos Browser
+    version: 2.0.0
+    engine: Blink
+    engine_version: ""
+    family: Chrome
