--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -4004,3 +4004,12 @@
     engine: Blink
     engine_version: ""
     family: Chrome
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) LandisGyrAIMbrowser/1.1.11 Chrome/83.0.4103.122 Electron/9.2.1 Safari/537.36
+  client:
+    type: browser
+    name: Landis+Gyr AIM Browser
+    version: 1.1.11
+    engine: Blink
+    engine_version: ""
+    family: Chrome
