--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Landis+Gyr AIM Browser (https://www.landisgyr.eu/product/gridstream-aim/)
+- regex: 'LandisGyrAIMbrowser/(\d+[\.\d]+)'
+  name: 'Landis+Gyr AIM Browser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # Lagatos Browser (https://lagatos.com/)
 - regex: 'lagatos-browser/(\d+[\.\d]+)'
   name: 'Lagatos Browser'
