--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -4013,3 +4013,12 @@
     engine: Blink
     engine_version: ""
     family: Chrome
+-
+  user_agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) LTBrowser/1.5.1 Chrome/80.0.3987.163 Electron/8.5.5 Safari/537.36
+  client:
+    type: browser
+    name: LT Browser
+    version: 1.5.1
+    engine: Blink
+    engine_version: ""
+    family: Chrome
