--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# LT Browser(https://www.lambdatest.com/lt-browser)
+- regex: 'LTBrowser/(\d+[\.\d]+)'
+  name: 'LT Browser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # Landis+Gyr AIM Browser (https://www.landisgyr.eu/product/gridstream-aim/)
 - regex: 'LandisGyrAIMbrowser/(\d+[\.\d]+)'
   name: 'Landis+Gyr AIM Browser'
