Adds detection for Peeps dBrowser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -4022,3 +4022,12 @@
     engine: Blink
     engine_version: ""
     family: Chrome
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) dBrowser/1.0.0 Chrome/84.0.4129.0 Electron/10.0.0-beta.2 Safari/537.36
+  client:
+    type: browser
+    name: Peeps dBrowser
+    version: 1.0.0
+    engine: Blink
+    engine_version: ""
+    family: Chrome
