--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,7 +5,14 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
-# LT Browser(https://www.lambdatest.com/lt-browser)
+# Peeps dBrowser (https://peepsx.com/dbrowser.html)
+- regex: 'dBrowser/(\d+[\.\d]+)'
+  name: 'Peeps dBrowser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
+# LT Browser (https://www.lambdatest.com/lt-browser)
 - regex: 'LTBrowser/(\d+[\.\d]+)'
   name: 'LT Browser'
   version: '$1'
