--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -4031,3 +4031,12 @@
     engine: Blink
     engine_version: ""
     family: Chrome
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) SushiBrowser/0.32.0 Chrome/85.0.4183.121 Electron/10.1.3 Safari/537.36
+  client:
+    type: browser
+    name: Sushi Browser
+    version: 0.32.0
+    engine: Blink
+    engine_version: ""
+    family: Chrome
