Adds detection for Y8 Browser

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -660,3 +660,8 @@
 - regex: 'EmbyTheater/([\d\.]+)'
   name: 'Emby Theater'
   version: '$1'
+
+# Y8 Browser (https://www.y8.com/)
+- regex: 'y8-browser/([\d\.]+)'
+  name: 'Y8 Browser'
+  version: '$1'
