--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -665,3 +665,8 @@
 - regex: 'y8-browser/([\d\.]+)'
   name: 'Y8 Browser'
   version: '$1'
+
+# NuMuKi Browser (https://www.numuki.com/app-download/)
+- regex: 'NuMuKiBrowser/([\d\.]+)'
+  name: 'NuMuKi Browser'
+  version: '$1'
