Adds detection for Roku OS

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -4287,13 +4287,16 @@
   browser_family: Android Browser
 -
   user_agent: Roku/DVP-5.2 (025.02E03197A)
-  os: [ ]
+  os:
+    name: Roku OS
+    version: "5.2"
+    platform: ""
   client: null
   device:
     type: tv
     brand: Roku
     model: Digital Video Player
-  os_family: Unknown
+  os_family: GNU/Linux
   browser_family: Unknown
 -
   user_agent: Mozilla/5.0 (Linux; Android 7.1.2; TB-PO1 Build/NHG47L) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/56.0.2924.87 Safari/537.36
