--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -229,6 +229,11 @@
 ##########
 # Linux
 ##########
+# Roku OS (https://www.roku.com/how-it-works/roku-os)
+- regex: 'Roku/DVP-(\d+[\.\d]+)'
+  name: 'Roku OS'
+  version: '$1'
+
 # DVKBuntu (https://www.dvkbuntu.org/)
 - regex: 'dvkbuntu'
   name: 'DVKBuntu'
