Adds detection for OpenWrt OS and uclient-fetch library

--- a/Tests/Parser/Client/fixtures/library.yml
+++ b/Tests/Parser/Client/fixtures/library.yml
@@ -251,3 +251,9 @@
     type: library
     name: gvfs
     version: 1.34.1
+
+- user_agent: uclient-fetch
+  client:
+    type: library
+    name: uclient-fetch
+    version: ""
