--- a/regexes/client/libraries.yml
+++ b/regexes/client/libraries.yml
@@ -156,3 +156,8 @@
 - regex: 'gvfs/(?:(\d+[\.\d]+))?'
   name: 'gvfs'
   version: '$1'
+
+# https://openwrt.org/packages/pkgdata/uclient-fetch
+- regex: 'uclient-fetch'
+  name: 'uclient-fetch'
+  version:
