--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -229,6 +229,11 @@
 ##########
 # Linux
 ##########
+# OpenWrt (https://openwrt.org/)
+- regex: 'uclient-fetch'
+  name: 'OpenWrt'
+  version: ''
+
 # DVKBuntu (https://www.dvkbuntu.org/)
 - regex: 'dvkbuntu'
   name: 'DVKBuntu'
