Improves detection for Roku OS and Roku brand

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -230,7 +230,11 @@
 # Linux
 ##########
 # Roku OS (https://www.roku.com/how-it-works/roku-os)
-- regex: 'Roku/DVP-(\d+[\.\d]+)'
+- regex: 'Roku(?:OS)?/(?:DVP|Pluto)?-?(\d+[\.\d]+)'
+  name: 'Roku OS'
+  version: '$1'
+
+- regex: 'Roku; (?:AP|UI); (\d+[\.\d]+)'
   name: 'Roku OS'
   version: '$1'
 
