--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -361,23 +361,29 @@
   browser_family: Chrome
 -
   user_agent: Mozilla/5.0 (QSP; Roku; AP; 6.2.80.2752)
-  os: [ ]
+  os:
+    name: Roku OS
+    version: 6.2.80.2752
+    platform: ""
   client: null
   device:
     type: tv
     brand: Roku
     model: Digital Video Player
-  os_family: Unknown
+  os_family: GNU/Linux
   browser_family: Unknown
 -
   user_agent: Mozilla/5.0 (QSP; Roku; UI; 5.3.0.49)
-  os: [ ]
+  os:
+    name: Roku OS
+    version: 5.3.0.49
+    platform: ""
   client: null
   device:
     type: tv
     brand: Roku
     model: Digital Video Player
-  os_family: Unknown
+  os_family: GNU/Linux
   browser_family: Unknown
 -
   user_agent: Mozilla/5.0 (Linux; Android 7.1; Rombica Smart Box v006) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/75.0.3770.101 Safari/537.36
@@ -2499,3 +2505,29 @@
     model: U43F8000Q
   os_family: Android
   browser_family: Opera
+-
+  user_agent: Roku/Pluto-9.40 (069.40E04200A) v5.3.4
+  os:
+    name: Roku OS
+    version: "9.40"
+    platform: ""
+  client: null
+  device:
+    type: tv
+    brand: Roku
+    model: Digital Video Player
+  os_family: GNU/Linux
+  browser_family: Unknown
+-
+  user_agent: RokuOS/9.4.0.4200, Ignition X/11.8.2021022414, Roku
+  os:
+    name: Roku OS
+    version: 9.4.0.4200
+    platform: ""
+  client: null
+  device:
+    type: tv
+    brand: Roku
+    model: Digital Video Player
+  os_family: GNU/Linux
+  browser_family: Unknown
