--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14089,7 +14089,7 @@ Readboy:
 
 # Roku
 Roku:
-  regex: 'Roku/DVP|QSP; Roku'
+  regex: 'Roku(?:OS)?/(?:DVP|Pluto)?-?|QSP; Roku'
   device: 'tv'
   model: 'Digital Video Player'
 
