Adds detection for Landis+Gyr AIM Browser

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1311,3 +1311,19 @@
     model: ""
   os_family: Windows
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) LandisGyrAIMbrowser/1.1.11 Chrome/83.0.4103.122 Electron/9.2.1 Safari/537.36
+  os:
+    name: Windows
+    version: "10"
+    platform: x64
+  client:
+    type: mobile app
+    name: Landis+Gyr AIM Browser
+    version: 1.1.11
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
