--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,69 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Sushi Browser (https://sushi-browser.com/)
+- regex: 'SushiBrowser/(\d+[\.\d]+)'
+  name: 'Sushi Browser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
+# Peeps dBrowser (https://peepsx.com/dbrowser.html)
+- regex: 'dBrowser/(\d+[\.\d]+)'
+  name: 'Peeps dBrowser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
+# LT Browser (https://www.lambdatest.com/lt-browser)
+- regex: 'LTBrowser/(\d+[\.\d]+)'
+  name: 'LT Browser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
+# Lagatos Browser (https://lagatos.com/)
+- regex: 'lagatos-browser/(\d+[\.\d]+)'
+  name: 'Lagatos Browser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
+# PSI Secure Browser (https://tca.psiexams.com/portal/testdelivery/sb_rpnow_download.jsp?)
+- regex: 'psi-secure-browser/(\d+[\.\d]+)'
+  name: 'PSI Secure Browser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
+# Harman Browser (https://www.harman.com/)
+- regex: 'Harman_Browser/(\d+[\.\d]+)'
+  name: 'Harman Browser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
+# Bonsai (https://bonsaibrowser.com/)
+- regex: 'bonsai-browser/(\d+[\.\d]+)'
+  name: 'Bonsai'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
+# Spectre Browser (https://spectrebots.com/products/spectre-desktop-browser)
+- regex: 'spectre-browser/(\d+[\.\d]+)'
+  name: 'Spectre Browser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
+# Flash Browser (https://github.com/asteroid-dev/FlashBrowser or https://github.com/radubirsan/FlashBrowser)
+- regex: 'FlashBrowser/(\d+[\.\d]+)'
+  name: 'Flash Browser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # Secure Browser (https://safertechnologies.io/)
 - regex: 'Secure/(?:(\d+[\.\d]+))?'
   name: 'Secure Browser'
