chore: merge upstream/master fix: rename regexs to versions

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -298,7 +298,7 @@
 - regex: '(?:Web0S; .*WEBOS|webOS|web0S|Palm webOS|hpwOS)(?:[/]?(\d+[\.\d]+))?'
   name: 'webOS'
   version: '$1'
-  regexs:
+  versions:
     - regex: 'WEBOS(\d+[\.\d]+)'
       version: '$1'
     - regex: 'Web0S; Linux/SmartTV.+Chrome/68'
@@ -457,8 +457,7 @@
 
 - regex: 'CFNetwork/.+ Darwin/(\d+[\.\d]+)(?!.*(?:x86_64|i386))'
   name: 'iOS'
-  version: ''
-  regexs:
+  versions:
     - regex: 'Darwin/21.0.0'
       version: '15.0'
     - regex: 'Darwin/20.6.0'
@@ -615,8 +614,7 @@
 
 - regex: 'CFNetwork/.+ Darwin/(?:[\d\.]+).+(?:x86_64|i386)|(?:x86_64-apple-)?darwin(?:[\d\.]+)'
   name: 'Mac'
-  version: ''
-  regexs:
+  versions:
     - regex: '(?:x86_64-apple-)?Darwin/?20.2.0.*'
       version: '11.1'
     - regex: '(?:x86_64-apple-)?Darwin/?20.[01].0'
