Adds detection for Visual Studio Code

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1327,3 +1327,19 @@
     model: ""
   os_family: Windows
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Code/1.61.2 Chrome/91.0.4472.164 Electron/13.5.1 Safari/537.36
+  os:
+    name: Windows
+    version: "10"
+    platform: x64
+  client:
+    type: mobile app
+    name: Visual Studio Code
+    version: 1.61.2
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
