--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -675,3 +675,8 @@
 - regex: 'LandisGyrAIMbrowser/(\d+[\.\d]+)'
   name: 'Landis+Gyr AIM Browser'
   version: '$1'
+
+# Visual Studio Code (https://code.visualstudio.com/)
+- regex: 'Code/(\d+[\.\d]+)'
+  name: 'Visual Studio Code'
+  version: '$1'
