--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2407,7 +2407,6 @@
     version: ""
     platform: ""
     family: Real-time OS
-
 -
   user_agent: Mozilla/4.0 (REX; U; en-us; Sanyo; SCP-6750/US; NetFront/3.4/AMB)
   os:
@@ -2416,3 +2415,11 @@
     version: ""
     platform: ""
     family: Real-time OS
+-
+  user_agent: Wireshark/3.4.9 WinSparkle/0.5.7 (Win64)
+  os:
+    name: Windows
+    short_name: WIN
+    version: ""
+    platform: x64
+    family: Windows
