Adds detection for Wireshark

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1343,3 +1343,19 @@
     model: ""
   os_family: Windows
   browser_family: Unknown
+-
+  user_agent: Wireshark/3.4.9 WinSparkle/0.5.7 (Win64)
+  os:
+    name: Windows
+    version: ""
+    platform: x64
+  client:
+    type: mobile app
+    name: Wireshark
+    version: 3.4.9
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
