--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -680,3 +680,8 @@
 - regex: 'Code/(\d+[\.\d]+)'
   name: 'Visual Studio Code'
   version: '$1'
+
+# Wireshark (https://www.wireshark.org)
+- regex: 'Wireshark/(\d+[\.\d]+)'
+  name: 'Wireshark'
+  version: '$1'
