Adds detection for Samsung Magician

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1359,3 +1359,16 @@
     model: ""
   os_family: Windows
   browser_family: Unknown
+-
+  user_agent: Magician
+  os: [ ]
+  client:
+    type: mobile app
+    name: Samsung Magician
+    version: ""
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Unknown
+  browser_family: Unknown
