--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -685,3 +685,8 @@
 - regex: 'Wireshark/(\d+[\.\d]+)'
   name: 'Wireshark'
   version: '$1'
+
+# Samsung Magician (https://www.samsung.com/semiconductor/minisite/ssd/product/consumer/magician/)
+- regex: 'Magician'
+  name: 'Samsung Magician'
+  version: ''
