Adds detection for Razer Synapse

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1372,3 +1372,19 @@
     model: ""
   os_family: Unknown
   browser_family: Unknown
+-
+  user_agent: Razer Central PC/1.0 (Win32NT; 10.0.19043.0; Microsoft Windows NT 10.0.19043.0)
+  os:
+    name: Windows
+    version: "10"
+    platform: ""
+  client:
+    type: mobile app
+    name: Razer Synapse
+    version: ""
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
