--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -690,3 +690,8 @@
 - regex: 'Magician'
   name: 'Samsung Magician'
   version: ''
+
+# Razer Synapse (https://www.razer.com/synapse-3)
+- regex: 'Razer Central PC'
+  name: 'Razer Synapse'
+  version: ''
