--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1388,3 +1388,19 @@
     model: ""
   os_family: Windows
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Binance/1.26.0 Chrome/89.0.4389.128 Electron/12.0.7 Safari/537.36 (electron 1.26.0)
+  os:
+    name: Windows
+    version: "10"
+    platform: x64
+  client:
+    type: mobile app
+    name: Binance
+    version: 1.26.0
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
