Adds detection for Git

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1404,3 +1404,19 @@
     model: ""
   os_family: Windows
   browser_family: Unknown
+-
+  user_agent: git/2.32.0.windows.2
+  os:
+    name: Windows
+    version: ""
+    platform: ""
+  client:
+    type: mobile app
+    name: Git
+    version: 2.32.0
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
