--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -700,3 +700,8 @@
 - regex: 'Razer Central PC'
   name: 'Razer Synapse'
   version: ''
+
+# Git (https://git-scm.com/download/win)
+- regex: 'git/(\d+[\.\d]+)'
+  name: 'Git'
+  version: '$1'
