Adds detection for Roku OS (#6891)
* Adds detection for Roku OS

* Improves detection for Roku OS and Roku brand

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -229,6 +229,15 @@
 ##########
 # Linux
 ##########
+# Roku OS (https://www.roku.com/how-it-works/roku-os)
+- regex: 'Roku(?:OS)?/(?:DVP|Pluto)?-?(\d+[\.\d]+)'
+  name: 'Roku OS'
+  version: '$1'
+
+- regex: 'Roku; (?:AP|UI); (\d+[\.\d]+)'
+  name: 'Roku OS'
+  version: '$1'
+
 # DVKBuntu (https://www.dvkbuntu.org/)
 - regex: 'dvkbuntu'
   name: 'DVKBuntu'
