Adds detection for OpenWrt OS and uclient-fetch library (#6892)
Co-authored-by: Stefan Giehl <stefan@matomo.org>

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2416,6 +2416,14 @@
     platform: ""
     family: Real-time OS
 -
+  user_agent: uclient-fetch
+  os:
+    name: OpenWrt
+    short_name: OWR
+    version: ""
+    platform: ""
+    family: GNU/Linux
+-
   user_agent: Roku/DVP-9.10 (509.10E04111A)
   os:
     name: Roku OS
