Adds detection for Google Podcasts, improves iOS version detection, improves Apple iPod detection, adds detection for Apple iPod Touch 7
*Adds detection for Google Podcasts
*Improves iOS version detection *Improves Apple iPod detection
*Adds detection for Apple iPod Touch 7

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2471,3 +2471,11 @@
     version: "9.40"
     platform: ""
     family: GNU/Linux
+-
+  user_agent: GooglePodcasts/2.0.2 iPod_touch/13.4.1 hw/iPod9_1
+  os:
+    name: iOS
+    short_name: IOS
+    version: 13.4.1
+    platform: ""
+    family: iOS
