--- a/Tests/fixtures/portable_media_player.yml
+++ b/Tests/fixtures/portable_media_player.yml
@@ -525,3 +525,19 @@
     model: Diverso 700
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: GooglePodcasts/2.0.2 iPod_touch/13.4.1 hw/iPod9_1
+  os:
+    name: iOS
+    version: 13.4.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Google Podcasts
+    version: 2.0.2
+  device:
+    type: portable media player
+    brand: Apple
+    model: iPod Touch 7
+  os_family: iOS
+  browser_family: Unknown
