--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -684,7 +684,7 @@
   name: 'iOS'
   version: '3.1'
 
-- regex: 'iPhone/(\d+[\.\d]*) hw/'
+- regex: '(?:iPhone|iPod_touch)/(\d+[\.\d]*) hw/'
   name: 'iOS'
   version: '$1'
 
