--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1420,3 +1420,19 @@
     model: ""
   os_family: Windows
   browser_family: Unknown
+-
+  user_agent: GooglePodcasts/2.0.2 iPod_touch/13.4.1 hw/iPod9_1
+  os:
+    name: iOS
+    version: 13.4.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Google Podcasts
+    version: 2.0.2
+  device:
+    type: portable media player
+    brand: Apple
+    model: iPod Touch 7
+  os_family: iOS
+  browser_family: Unknown
