Adds detection for Windows CryptoAPI, Windows Delivery Optimization, Windows Update Agent, Dr. Watson and improves Windows OS detection

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -710,3 +710,23 @@
 - regex: 'GooglePodcasts/(\d+[\.\d]+)'
   name: 'Google Podcasts'
   version: '$1'
+
+# Windows CryptoAPI (https://www.microsoft.com/en-us/)
+- regex: 'Microsoft-CryptoAPI/(\d+[\.\d]+)'
+  name: 'Windows CryptoAPI'
+  version: ''
+
+# Windows Delivery Optimization (https://www.microsoft.com/en-us/)
+- regex: 'Microsoft-Delivery-Optimization'
+  name: 'Windows Delivery Optimization'
+  version: ''
+
+# Windows Update Agent (https://www.microsoft.com/en-us/)
+- regex: 'Windows-Update-Agent'
+  name: 'Windows Update Agent'
+  version: ''
+
+# Dr. Watson (https://www.microsoft.com/en-us/)
+- regex: 'MSDW'
+  name: 'Dr. Watson'
+  version: ''
