--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2479,3 +2479,35 @@
     version: 13.4.1
     platform: ""
     family: iOS
+-
+  user_agent: Microsoft-CryptoAPI/10.0
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10.0"
+    platform: ""
+    family: Windows
+-
+  user_agent: Microsoft-Delivery-Optimization/10.0
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10.0"
+    platform: ""
+    family: Windows
+-
+  user_agent: Windows-Update-Agent/10.0.10011.16384 Client-Protocol/2.32
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10.0"
+    platform: ""
+    family: Windows
+-
+  user_agent: MSDW
+  os:
+    name: Windows
+    short_name: WIN
+    version: ""
+    platform: ""
+    family: Windows
