--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -357,7 +357,7 @@
   name: 'Windows'
   version: ''
 
-- regex: 'Windows/(\d+\.\d+)'
+- regex: '(?:Windows(?:-Update-Agent)?|Microsoft-(?:CryptoAPI|Delivery-Optimization))/(\d+\.\d+)'
   name: 'Windows'
   version: '$1'
 
@@ -417,7 +417,7 @@
   name: 'Windows'
   version: '3.1'
 
-- regex: 'Windows|Win64'
+- regex: 'Windows|Win64|MSDW'
   name: 'Windows'
   version: ''
 
